--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,34 @@
 body {
   text-align: center;
-  background-color: #888888;
+  background-color: #fdf0d5;
 }
 
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
   margin:  5%;
-  color: #FEF2BF;
+  color: #1c110a;
 }
 
 .container {
   display: block;
-  width: 50%;
   margin: auto;
 
 }
 .start{
   margin: 25px auto;
   width: 400px;
-  border: 10px solid black;
+  border: 10px solid #1c110a;
   border-radius: 40px;
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  color: #FEF2BF;
-  background-color: #011f3f;
+  color: #1c110a;
+  background-color: #f0544f;
+  transition: 0.3s;
 }
 .start:hover{
   border: 10px solid white;
+  color: white;
 }
 .btn {
   margin: 25px;
