--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   background-color: #fdf0d5;
-  background-image: url('images/background.png');
+  /* background-image: url('images/background.png'); */
   background-repeat: no-repeat;
   width: 1440px;
   height: 1024px;
@@ -10,63 +10,76 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 1.5rem;
-  margin:  5%;
+  margin: 5%;
   color: #1c110a;
 }
 
 .container {
-  display: block;
-  margin: auto;
-
-}
-.start{
-  margin: 25px auto;
-  width: 400px;
-  border: 10px solid #1c110a;
+  background-color: white;
   border-radius: 40px;
+  box-shadow: 0 2px 8px 3px #999 inset;
+  display: flex;
+  align-items: center;
+  margin: auto;
+  position: absolute;
+  top: 295px;
+  left: 420px;
+  height: 600px;
+  width: 600px;
+}
+
+.start {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  width: 20%;
   font-family: 'Press Start 2P', cursive;
-  font-size: 3rem;
-  color: #1c110a;
+  font-size: 1rem;
+  color: #fff;
   background-color: #f0544f;
   transition: 0.3s;
+  padding: 0 20px;
+  border-radius: 15px;
 }
-.start:hover{
-  border: 10px solid white;
+
+.start:hover {
   color: white;
+  background-color: green;
+  padding: 0 30px;
 }
+
 .btn {
   margin: 25px;
   display: inline-block;
+  box-shadow: 0 2px 6px 2px #999;
   height: 200px;
   width: 200px;
-  border: 10px solid #1c110a;
   border-radius: 20%;
   transition: 0.3s;
 }
 
-.btn:hover{
-  border: 10px solid white;
+.btn:hover {
+  box-shadow: 0 0 0 5px #68b7b2;
 }
 
 .game-over {
   background-color: red;
-  opacity: 0.8;
 }
 
 .red {
-  background-color: red;
+  background-color: #d16666;
 }
 
 .green {
-  background-color: green;
+  background-color: #587b7f;
 }
 
 .blue {
-  background-color: blue;
+  background-color: #a9e4ef;
 }
 
 .yellow {
-  background-color: yellow;
+  background-color: #ffee88;
 }
 
 .pressed {
@@ -74,39 +87,56 @@ body {
   background-color: grey;
 }
 
-.score{
-  font-family: 'Press Start 2P', cursive;
-  font-size: =2rem;
-  color: #1c110a;
-  margin: 0 5px;
+.highlight {
+  box-shadow: 0 0 0 10px green;
 }
 
-.score-number{
+.score {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
   color: #1c110a;
   margin: 0 5px;
 }
 
-.score-board{
+.score-number {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2rem;
+  color: #1c110a;
+  margin: 0 20px;
+}
+
+.score-board {
   align-items: center;
   background-color: white;
   border-radius: 15px;
-  box-shadow: 0 4px 8px 1px inset;
+  box-shadow: 0 4px 8px 1px #999 inset;
   display: flex;
-  justify-content:center;
+  justify-content: space-between;
   margin: auto;
-  width:380px;
-  height:120px;
+  width: 380px;
+  height: 120px;
 }
 
-.score-shell{
-  background-image: url(images/backgroundaccent.png);
+.score-shell {
+  background-image: url('images/backgroundaccent.png');
   background-size: contain;
   border-radius: 20px;
-  box-shadow: 0 4px 8px 1px;
+  box-shadow: 0 4px 8px 1px #999;
   display: flex;
-  width:400px;
-  height:140px;
+  width: 400px;
+  height: 140px;
   margin: auto;
+  position: absolute;
+  top: 176px;
+  left: 520px;
+}
+
+.signature{
+  /* background-color: #fea100; */
+  /* position: absolute; */
+  display: none;
+  bottom: 0;
+  text-align: center;
+  margin: 0;
+  width: 100%;
 }
